CUI-55/CR-6555 : Alert/Messages system no longer overlaps the logo.

--- a/forgerock-ui-commons/src/main/resources/css/common/common.less
+++ b/forgerock-ui-commons/src/main/resources/css/common/common.less
@@ -537,14 +537,16 @@ hr {
 */
 .alert-system {
   position:fixed;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 5px auto 0;
   z-index:10000;
   left: 0;
   right: 0;
-  margin-top:70px;
   width:400px;
   min-height: 50px;
+}
+
+.logged-user .alert-system {
+    margin-top:70px;
 }
 
 .alert-message.alert-warning {
